# launch-dynamics

./: .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
.streamlit/: config.toml
app/: dashboard.py
config/: default.yaml
src/landing_sim/: __init__.py  ai_analyst.py  animation.py  contact.py  dynamics.py  loads.py  monte_carlo.py  plotting.py  simulation.py  thrust.py  vehicle.py
tests/: test_contact.py  test_dynamics.py  test_monte_carlo.py  test_thrust.py  test_vehicle.py
